# robotic-slack-notifications

./: .gitignore  Dockerfile  tasks.py
aws/: app.py  requirements.txt  ros_slackbot_stack.py
ros/: requirements.txt
ros/src/aws_publisher/: CMakeLists.txt  package.xml  setup.py
ros/src/aws_publisher/launch/: aws_publisher.launch
ros/src/aws_publisher/src/aws_publisher/: aws_publisher.py
slack/: ros_slackbot.py
