<?xml version="1.0"?>
<package format="2">
  <name>aws_publisher</name>
  <version>0.0.0</version>
  <description>Forwards ROS topics to AWS</description>
  <maintainer email="t.s.noble@outlook.com">Tom Noble</maintainer>
  <license>MIT License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
